--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter_gradient_colors: ^2.1.1
   cached_network_image: ^3.2.1
   table_calendar: ^3.0.9
   font_awesome_flutter: ^10.1.0
